syntax = "proto3";

package message;

option go_package = "github.com/ayananerv/do-ur-chat/api/gen/message";

enum MessageType {
  TEXT = 0;
  IMAGE = 1;
  FILE = 2;
  ACK = 3;
  HEARTBEAT = 4;
}

message ChatMessage {
  string msg_id = 1; // Only-one ID generated by server
  string client_id = 2; // UUID generated by client, for deduplication
  string session_id = 3;
  int64 sender_id =4;
  int64 receiver_id = 5;
  MessageType type = 6;
  bytes content = 7;
  int64 seq_id = 8; // sequence id, for sorting
  int64 timestamp = 9; // timestamp of sending
}

message SessionInfo {
  string session_id = 1;
  int32 type = 2; // single chat or group chat
  string session_name = 3;
  ChatMessage last_msg = 4;
  int32 unread_count = 5; // NOT understand now
  int64 update_time = 6; // for sort
}

// client fetch session list when log in
message SyncSessionResponse {
  repeated SessionInfo sessions = 1;
}