package main

import (
	"bufio"
	"flag"
	"fmt"
	"log"
	"net/url"
	"os"
	"os/signal"
	"strings"
	"time"

	"github.com/gorilla/websocket"
	"google.golang.org/protobuf/proto"

	// âš ï¸ è®°å¾—æŠŠè¿™é‡Œæ›¿æ¢ä¸ºä½  go.mod ä¸­çš„å®é™… module å
	pb "github.com/ayananerv/do-ur-chat/api/gen/message"
)

// å®šä¹‰å‘½ä»¤è¡Œå‚æ•°
var (
	serverAddr = flag.String("addr", "localhost:8080", "æœåŠ¡å™¨åœ°å€")
	myUID      = flag.Int64("uid", 1, "å½“å‰ç™»å½•çš„ç”¨æˆ·ID")
	targetUID  = flag.Int64("to", 2, "é»˜è®¤å‘é€ç»™è° (ç›®æ ‡ç”¨æˆ·ID)")
)

func main() {
	flag.Parse() // è§£æå‘½ä»¤è¡Œå‚æ•°

	// 1. å»ºç«‹è¿æ¥
	u := url.URL{Scheme: "ws", Host: *serverAddr, Path: "/ws", RawQuery: fmt.Sprintf("uid=%d", *myUID)}
	log.Printf("æ­£åœ¨è¿æ¥æœåŠ¡å™¨: %s ...", u.String())

	c, _, err := websocket.DefaultDialer.Dial(u.String(), nil)
	if err != nil {
		log.Fatalf("è¿æ¥å¤±è´¥: %v", err)
	}
	defer c.Close()

	log.Printf("âœ… ç™»å½•æˆåŠŸ! æˆ‘æ˜¯ç”¨æˆ· [%d], é»˜è®¤å‘ç»™ [%d]", *myUID, *targetUID)
	log.Println("ğŸ‘‰ è¯·åœ¨æ§åˆ¶å°è¾“å…¥æ¶ˆæ¯å¹¶å›è½¦å‘é€ (è¾“å…¥ 'exit' é€€å‡º):")

	// 2. å¯åŠ¨æ¥æ”¶åç¨‹ (åå°ç›‘å¬)
	done := make(chan struct{})
	go readLoop(c, done)

	// 3. å¯åŠ¨å‘é€å¾ªç¯ (ç›‘å¬é”®ç›˜è¾“å…¥)
	inputLoop(c)

	// ç­‰å¾…æ¥æ”¶åç¨‹é€€å‡ºï¼ˆé˜²æ­¢ä¸»ç¨‹åºè¿‡æ—©ç»“æŸï¼‰
	<-done
}

// æ¥æ”¶æ¶ˆæ¯çš„é€»è¾‘
func readLoop(c *websocket.Conn, done chan struct{}) {
	defer close(done)
	for {
		_, messageData, err := c.ReadMessage()
		if err != nil {
			log.Printf("âŒ è¿æ¥æ–­å¼€: %v", err)
			return
		}

		// ååºåˆ—åŒ–
		msg := &pb.ChatMessage{}
		if err := proto.Unmarshal(messageData, msg); err != nil {
			log.Printf("æ•°æ®æ ¼å¼é”™è¯¯: %v", err)
			continue
		}

		// æ¼‚äº®çš„æ‰“å°æ ¼å¼
		fmt.Printf("\nğŸ“© [æ”¶åˆ°æ–°æ¶ˆæ¯] From User %d:\n   %s\nğŸ‘‰ è¯·è¾“å…¥: ",
			msg.SenderId,
			string(msg.Content),
		)
	}
}

// å‘é€æ¶ˆæ¯çš„é€»è¾‘ (è¯»å–æ§åˆ¶å°)
func inputLoop(c *websocket.Conn) {
	scanner := bufio.NewScanner(os.Stdin)

	// ç›‘å¬ Ctrl+C ä¿¡å·
	interrupt := make(chan os.Signal, 1)
	signal.Notify(interrupt, os.Interrupt)

	for {
		fmt.Print("ğŸ‘‰ è¯·è¾“å…¥: ")

		// ä½¿ç”¨ select å®ç°éé˜»å¡ç›‘å¬ï¼Œé˜²æ­¢ Ctrl+C æ— æ³•é€€å‡º
		ch := make(chan string)
		go func() {
			if scanner.Scan() {
				ch <- scanner.Text()
			} else {
				close(ch)
			}
		}()

		select {
		case text, ok := <-ch:
			if !ok {
				return
			} // è¯»ä¸åˆ°è¾“å…¥äº†
			if strings.TrimSpace(text) == "" {
				continue
			}
			if text == "exit" {
				return
			}

			// æ„é€  Protobuf æ¶ˆæ¯
			msg := &pb.ChatMessage{
				MsgId:      fmt.Sprintf("msg_%d", time.Now().UnixNano()), // æ¨¡æ‹Ÿå”¯ä¸€ID
				SessionId:  "demo_session",
				SenderId:   *myUID,
				ReceiverId: *targetUID, // å‘ç»™å‘½ä»¤è¡ŒæŒ‡å®šçš„é‚£ä¸ª ID
				Type:       pb.MessageType_TEXT,
				Content:    []byte(text),
				Timestamp:  time.Now().UnixMilli(),
			}

			// åºåˆ—åŒ– & å‘é€
			data, _ := proto.Marshal(msg)
			err := c.WriteMessage(websocket.BinaryMessage, data)
			if err != nil {
				log.Printf("å‘é€å¤±è´¥: %v", err)
				return
			}
			// log.Println("âœ” å·²å‘é€") // ä¿æŒç•Œé¢æ¸…çˆ½ï¼Œå‘é€æˆåŠŸä¸åˆ·å±

		case <-interrupt:
			log.Println("ç¨‹åºé€€å‡º")
			return
		}
	}
}
